--- a/WpfApp4/AddExtraIngredientsDialog.xaml
+++ b/WpfApp4/AddExtraIngredientsDialog.xaml
@@ -1,10 +1,25 @@
 ﻿<Window x:Class="WpfApp4.ToppingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Toppings Selection" Height="200" Width="300">
+        Title="Toppings Selection" Height="410" Width="300">
     <Grid>
-        <CheckBox Name="ExtraCheeseCheckBox" Content="Extra Cheese" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10"/>
-        <CheckBox Name="ExtraBaconCheckBox" Content="Extra Bacon" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,30,0,0"/>
-        <Button Content="OK" Name="OkButton" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Height="30" Margin="10,70,0,0" Click="OkButton_Click"/>
+        <TextBlock Text="Vælg Toppings" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="163,10,0,0" FontSize="18"/>
+        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10">
+            <CheckBox Name="ExtraCheeseCheckBox" Content="Extra Cheese" VerticalAlignment="Top" Margin="0,0,0,10"/>
+            <CheckBox Name="ExtraBaconCheckBox" Content="Extra Bacon" VerticalAlignment="Top" Margin="0,0,0,10"/>
+            <CheckBox Name="ExtraMozzarellaCheeseCheckBox" Content="Extra Mozzarella Cheese" VerticalAlignment="Top" Margin="0,0,0,10"/>
+            <CheckBox Name="ExtraPepperoniCheckBox" Content="Extra Pepperoni" VerticalAlignment="Top" Margin="0,0,0,10"/>
+            <CheckBox Name="ExtraMushroomsCheckBox" Content="Extra Mushrooms" VerticalAlignment="Top" Margin="0,0,0,10"/>
+            <CheckBox Name="ExtraOnionsCheckBox" Content="Extra Onions" VerticalAlignment="Top" Margin="0,0,0,10"/>
+            <CheckBox Name="ExtraOliveCheckBox" Content="Extra Olive" VerticalAlignment="Top" Margin="0,0,0,10"/>
+            <CheckBox Name="ExtraSausageCheckBox" Content="Extra Sausage" VerticalAlignment="Top" Margin="0,0,0,10"/>
+            <CheckBox Name="ExtraHamCheckBox" Content="Extra Ham" VerticalAlignment="Top" Margin="0,0,0,10"/>
+            <CheckBox Name="ExtraPineappleCheckBox" Content="Extra Pineapple" VerticalAlignment="Top" Margin="0,0,0,10"/>
+            <CheckBox Name="ExtraSpinachCheckBox" Content="Extra Spinach" VerticalAlignment="Top" Margin="0,0,0,10"/>
+            <CheckBox Name="ExtraJalapenosCheckBox" Content="Extra Jalapenos" VerticalAlignment="Top" Margin="0,0,0,10"/>
+            <CheckBox Name="ExtraAnchoviesCheckBox" Content="Extra Anchovies" VerticalAlignment="Top" Margin="0,0,0,10"/>
+            <CheckBox Name="ExtraOlivesCheckBox" Content="Extra Olives" VerticalAlignment="Top" Margin="0,0,0,10"/>
+        </StackPanel>
+        <Button Content="OK" Name="OkButton" HorizontalAlignment="Left" VerticalAlignment="Top" Width="96" Height="30" Margin="10,354,0,0" Click="OkButton_Click"/>
     </Grid>
 </Window>
