--- a/WpfApp4/MainWindow.xaml
+++ b/WpfApp4/MainWindow.xaml
@@ -1,16 +1,130 @@
 ﻿<Window x:Class="WpfApp4.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Pizza Bestilling" Height="350" Width="500">
-    <Grid>
-        <ListBox Name="PizzaListBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Height="200" Margin="10">
-            <ListBoxItem Content="Margeritta" Tag="8.99"/>
-            <ListBoxItem Content="Pepperoni" Tag="9.99"/>
-            <ListBoxItem Content="Hawai" Tag="10.99"/>
-        </ListBox>
-        <Button Content="Tilføj til kurv" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="30" Margin="230,10,0,0" Click="AddToCart_Click"/>
-        <ListBox Name="CartListBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Height="200" Margin="230,50,0,0"/>
-        <Button Content="Køb" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="30" Margin="230,260,0,0" Click="Buy_Click"/>
-        <TextBlock Name="TotalPriceTextBlock" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="340,265,0,0"/>
-    </Grid>
+        Title="Pizza Bestilling" MinWidth="800" MinHeight="400">
+    <Viewbox Stretch="Uniform">
+        <Grid>
+            <Grid.Resources>
+                <Style x:Key="PizzaListBoxItemStyle" TargetType="ListBoxItem">
+                    <Setter Property="Background" Value="Transparent"/>
+                    <Setter Property="FontSize" Value="20"/>
+                    <Setter Property="Margin" Value="6,2,5,8"/>
+                    <Setter Property="BorderBrush" Value="#FF00CAFF"/>
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                    <Setter Property="VerticalContentAlignment" Value="Center"/>
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="ListBoxItem">
+                                <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="15">
+                                    <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                    <Style.Triggers>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="Background" Value="SkyBlue"/>
+                            <Setter Property="Foreground" Value="White"/>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="SkyBlue"/>
+                            <Setter Property="Foreground" Value="White"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+
+                <Style x:Key="RoundedButtonStyle" TargetType="Button">
+                    <Setter Property="Background" Value="#FF2ECC71"/>
+                    <Setter Property="Foreground" Value="White"/>
+                    <Setter Property="Padding" Value="10,5"/>
+                    <Setter Property="BorderThickness" Value="0"/>
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="Button">
+                                <Border Background="{TemplateBinding Background}" CornerRadius="15">
+                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="#FF27AE60"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+
+                <DataTemplate x:Key="PizzaListBoxItemTemplate">
+                    <TextBlock Text="{Binding Content}" />
+                </DataTemplate>
+            </Grid.Resources>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="36*"/>
+                <ColumnDefinition Width="461*"/>
+            </Grid.ColumnDefinitions>
+
+            <Button Style="{StaticResource RoundedButtonStyle}" Content="Tilføj til kurv" HorizontalAlignment="Left" VerticalAlignment="Top" Width="339" Height="43" Margin="265,10,0,0" Click="AddToCart_Click" Grid.Column="1"/>
+            <ListBox Name="CartListBox" HorizontalAlignment="Left" VerticalAlignment="Center" Width="277" Height="361" Margin="609,0,0,0" Grid.Column="1"/>
+            <Button Style="{StaticResource RoundedButtonStyle}" Content="Køb" HorizontalAlignment="Left" VerticalAlignment="Top" Width="277" Height="70" Margin="609,461,0,0" Click="Buy_Click" Grid.Column="1"/>
+            <TextBlock FontSize="26" Name="TotalPriceTextBlock" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="265,480,0,0" Height="62" Grid.Column="1"/>
+
+            <TabControl Grid.ColumnSpan="2" Margin="0,0,714,0">
+                <TabItem Header="Pizzas">
+                    <Grid>
+                        <ListBox Name="PizzaListBox" HorizontalAlignment="Left" VerticalAlignment="Center" Width="276" Height="514" Margin="10,0,0,0"
+                                 ItemContainerStyle="{StaticResource PizzaListBoxItemStyle}"
+                                 ItemTemplate="{StaticResource PizzaListBoxItemTemplate}" Grid.ColumnSpan="2">
+                            <ListBoxItem Content="Nr. 1 - Pizza Margeritta" Tag="0.55"/>
+                            <ListBoxItem Content="Nr. 2 - Pizza Pepperoni" Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 3 - Pizza Bolognese" Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 4 - Pizza Vegetar" Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 5 - Pizza Mexicana  " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 6 - Pizza Bearnaise  " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 7 - Pizza Bella Italia " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 8 - Pizza Kebab" Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 9 - Pizza Capricciosa  " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 10 - Pizza Rostica  " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 11 - Pizza Alfredo  " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 12 - Pizza Volcane    " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 13 - Pizza Speciale  " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 14 - Pizza Napoli    " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 15 - Pizza Hasseris    " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 16 - Pizza Rauma    " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 17 - Pizza Marco Polo  " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 18 - Pizza Mirza    " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 19 - Pizza Negro    " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 20 - Pizza Sanaria    " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 21 - Pizza Aria    " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 22 - Pizza Doorsa  " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 23 - Pizza Vitelo    " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 24 - Pizza Milano    " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 25 - Pizza Zana     " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 26 - Pizza Luksus      " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 27 - Pizza Aso      " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 28 - Pizza Marco      " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 29 - Pizza       " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 30 - Pizza Minna    " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 31 - Pizza Oskar      " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 32 - Pizza Genova      " Tag="0.65"/>
+                            <ListBoxItem Content="Nr. 33 - Pizza Tabasco     " Tag="0.65"/>
+                        </ListBox>
+                    </Grid>
+                </TabItem>
+
+                <TabItem Header="Drinks">
+                    <Grid>
+                        <ListBox Name="DrinksListBox" HorizontalAlignment="Left" VerticalAlignment="Center" Width="276" Height="514" Margin="10,0,0,0"
+                 ItemContainerStyle="{StaticResource PizzaListBoxItemStyle}"
+                 ItemTemplate="{StaticResource PizzaListBoxItemTemplate}" Grid.ColumnSpan="2">          
+                            <ListBoxItem Content="Coca-Cola" Tag="1.50"/>
+                            <ListBoxItem Content="Pepsi" Tag="1.50"/>
+                            <ListBoxItem Content="Sprite" Tag="1.50"/>
+                        </ListBox>
+                    </Grid>
+                </TabItem>
+
+            </TabControl>
+        </Grid>
+    </Viewbox>
 </Window>
