--- a/WpfApp4/AddExtraIngredientsDialog.xaml
+++ b/WpfApp4/AddExtraIngredientsDialog.xaml
@@ -1,25 +1,46 @@
 ﻿<Window x:Class="WpfApp4.ToppingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Toppings Selection" Height="410" Width="300">
+        Title="Toppings Selection" Height="430" Width="300">
+    <Window.Resources>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontSize" Value="18"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Setter Property="Margin" Value="163,10,0,0"/>
+        </Style>
+        <Style TargetType="CheckBox">
+            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Setter Property="Margin" Value="0,0,0,10"/>
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Setter Property="Width" Value="96"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Margin" Value="10,354,0,0"/>
+        </Style>
+    </Window.Resources>
     <Grid>
-        <TextBlock Text="Vælg Toppings" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="163,10,0,0" FontSize="18"/>
+        <TextBlock Text="Vælg Toppings" Margin="163,15,0,0" FontSize="18"/>
+        <TextBlock Text="Alt Extra Topping (8 kr stk)" Margin="150,375,0,0" FontSize="12"/>
+
         <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10">
-            <CheckBox Name="ExtraCheeseCheckBox" Content="Extra Cheese" VerticalAlignment="Top" Margin="0,0,0,10"/>
-            <CheckBox Name="ExtraBaconCheckBox" Content="Extra Bacon" VerticalAlignment="Top" Margin="0,0,0,10"/>
-            <CheckBox Name="ExtraMozzarellaCheeseCheckBox" Content="Extra Mozzarella Cheese" VerticalAlignment="Top" Margin="0,0,0,10"/>
-            <CheckBox Name="ExtraPepperoniCheckBox" Content="Extra Pepperoni" VerticalAlignment="Top" Margin="0,0,0,10"/>
-            <CheckBox Name="ExtraMushroomsCheckBox" Content="Extra Mushrooms" VerticalAlignment="Top" Margin="0,0,0,10"/>
-            <CheckBox Name="ExtraOnionsCheckBox" Content="Extra Onions" VerticalAlignment="Top" Margin="0,0,0,10"/>
-            <CheckBox Name="ExtraOliveCheckBox" Content="Extra Olive" VerticalAlignment="Top" Margin="0,0,0,10"/>
-            <CheckBox Name="ExtraSausageCheckBox" Content="Extra Sausage" VerticalAlignment="Top" Margin="0,0,0,10"/>
-            <CheckBox Name="ExtraHamCheckBox" Content="Extra Ham" VerticalAlignment="Top" Margin="0,0,0,10"/>
-            <CheckBox Name="ExtraPineappleCheckBox" Content="Extra Pineapple" VerticalAlignment="Top" Margin="0,0,0,10"/>
-            <CheckBox Name="ExtraSpinachCheckBox" Content="Extra Spinach" VerticalAlignment="Top" Margin="0,0,0,10"/>
-            <CheckBox Name="ExtraJalapenosCheckBox" Content="Extra Jalapenos" VerticalAlignment="Top" Margin="0,0,0,10"/>
-            <CheckBox Name="ExtraAnchoviesCheckBox" Content="Extra Anchovies" VerticalAlignment="Top" Margin="0,0,0,10"/>
-            <CheckBox Name="ExtraOlivesCheckBox" Content="Extra Olives" VerticalAlignment="Top" Margin="0,0,0,10"/>
+            <CheckBox Name="ExtraCheeseCheckBox" Content="Extra Cheese"/>
+            <CheckBox Name="ExtraBaconCheckBox" Content="Extra Bacon"/>
+            <CheckBox Name="ExtraMozzarellaCheeseCheckBox" Content="Extra Mozzarella Cheese"/>
+            <CheckBox Name="ExtraPepperoniCheckBox" Content="Extra Pepperoni"/>
+            <CheckBox Name="ExtraMushroomsCheckBox" Content="Extra Mushrooms"/>
+            <CheckBox Name="ExtraOnionsCheckBox" Content="Extra Onions"/>
+            <CheckBox Name="ExtraOliveCheckBox" Content="Extra Olive"/>
+            <CheckBox Name="ExtraSausageCheckBox" Content="Extra Sausage"/>
+            <CheckBox Name="ExtraHamCheckBox" Content="Extra Ham"/>
+            <CheckBox Name="ExtraPineappleCheckBox" Content="Extra Pineapple"/>
+            <CheckBox Name="ExtraSpinachCheckBox" Content="Extra Spinach"/>
+            <CheckBox Name="ExtraJalapenosCheckBox" Content="Extra Jalapenos"/>
+            <CheckBox Name="ExtraAnchoviesCheckBox" Content="Extra Anchovies"/>
+            <CheckBox Name="ExtraOlivesCheckBox" Content="Extra Olives"/>
         </StackPanel>
-        <Button Content="OK" Name="OkButton" HorizontalAlignment="Left" VerticalAlignment="Top" Width="96" Height="30" Margin="10,354,0,0" Click="OkButton_Click"/>
+        <Button Content="OK" Name="OkButton" Width="96" Height="30" Margin="10,361,0,0" Click="OkButton_Click"/>
     </Grid>
 </Window>
